semi fixes: circles took off stroke to take off jagged edges. paths stopped animation to stop them from being cut off on zoom.

--- a/style/style.css
+++ b/style/style.css
@@ -268,8 +268,9 @@ line-height: 20px;
 .port circle {
 	fill: grey;
 	stroke:white;
-	stroke-width:.1;
-	/*opacity: 0.5;*/
+	stroke-width:.25;
+	stroke-opacity:0;
+	fill-opacity: 0.5;
 }
 .port .label {
 	font-size: 20px;
